Fixed concat key field
Message key is mapped to log and should reflect correctly in the plugin config

--- a/charts/fluentd-elasticsearch/templates/configmaps.yaml
+++ b/charts/fluentd-elasticsearch/templates/configmaps.yaml
@@ -158,7 +158,7 @@ data:
     <filter **>
       @id filter_concat
       @type concat
-      key message
+      key log
       multiline_end_regexp /\n$/
       separator ""
       timeout_label @NORMAL
